--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <a class="nav-link" href="#Contact">Contact</a>
                     </li>
                     <li>
-                        <a class="nav-link active" href="Portofolio.html">About Me</a>
+                        <a class="nav-link active" href="https://berzkiport.vercel.app/">About Me</a>
                     </li>
                 </ul>
             </div>
